css/anon.css
.content.anonView {
  left: 0;
}

.anonView .channelView {
  width: auto;
  height: 100%;
}

.anonView .channelHeader {
  padding: 53px 21px 13px;
}

.anonView #poweredby {
  top: 66px;
  margin: 0;
}

.anonView .navigation {
  position: absolute;
  top: 0;
}

/* specific to the prototypes until we implement the share options */
.anonView .share .popup {
  left: -53px;
}

.navigation {
  padding: 0 0 13px;
  position: relative;
  width: 580px;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
  .navigation .buddycloud123 {
    margin: 3px 0 0 5px;
    width: 71px;
    height: 18px;
    font: 0/0 a;
    color: transparent;
    vertical-align: top;
    background: url("/img/buddycloud.png") no-repeat center;
    display: inline-block;
  }
.userbar .joinBuddycloud {
  width: 580px;
  margin: -237px 0 26px;
  border-radius: 5px;
  opacity: 0;
  -webkit-transition: margin 500ms, opacity 500ms;
     -moz-transition: margin 500ms, opacity 500ms;
      -ms-transition: margin 500ms, opacity 500ms;
       -o-transition: margin 500ms, opacity 500ms;
          transition: margin 500ms, opacity 500ms;
}
  .userbar.action-open .joinBuddycloud {
    margin-top: 13px;
    margin-bottom: 0;
    opacity: 1;
  }

